Version:    0.0.9 fixed:      safari下html,body overflow-x无效修复

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 html,body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
+  position: fixed;
 }
 body {
   background: #fff;
@@ -62,7 +63,6 @@ body {
 .table {
   background: white;
   border: 1px solid #BEC0C2;
-  // box-shadow: 0px 1px 2px 0px #BEC0C2;
 }
 .table>thead>tr>th {
   height: 30px;
